feat: add navigation

--- a/style.css
+++ b/style.css
@@ -1,22 +1,90 @@
-@import url(normalize.css); 
+@import url(normalize.css);
 
 @font-face {
     font-family: Source Sans Pro;
      src: url("assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf");
    }
-   * {
+   
+* {
     box-sizing: border-box;
-  }
+}
 
-  body {
+html {
+  scroll-behavior: smooth;
+}
+
+header{
+  background-color: #281711;
+}
+
+body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
     margin: 0; padding: 0;
-  }
-  .container {
+}
+
+
+
+.container {
     max-width: 1440px;
     margin: 0 auto;
+}
+
+.nav-list{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  
+}  
+
+.nav-link{
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  font-size:20px;
+  font-weight: 300;
+  color:rgb(246, 225, 230);
+  transition:0.3s;
+}
+
+.nav-link {
+  position: relative;
+  padding: 0 12px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 50px;
+  color: #fff; 
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 12px;
+  bottom: -5px;
+  width: calc(100% - 24px);
+  height: 2px;
+  background-color: rgb(249, 242, 36);
+  opacity: 0;
+  transition: .5s;
+}
+
+.nav-link:hover::after {
+  opacity: 1;
+  animation-name: slidein;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slidein {
+  from {
+    width: 0;
   }
+  to {
+    width: calc(100% - 24px);
+  }
+}
 
