--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     justify-content: space-between;
     min-height: 100vh;
     margin: 0; padding: 0;
+    font-family:  'Source Sans Pro', sans-serif;
 }
 
 
@@ -40,16 +41,6 @@ body {
   
 }  
 
-.nav-link{
-  padding: 0 20px;
-  line-height: 50px;
-  text-decoration: none;
-  font-size:20px;
-  font-weight: 300;
-  color:rgb(246, 225, 230);
-  transition:0.3s;
-}
-
 .nav-link {
   position: relative;
   padding: 0 12px;
@@ -57,11 +48,18 @@ body {
   font-size: 20px;
   font-weight: 300;
   line-height: 50px;
-  color: #fff; 
+  color: rgb(255, 255, 255); 
+  transition:0.3s;
+}
+
+.nav-link:hover {
+color:rgb(253, 236, 9);
+opacity: 0.7;
+
 }
 
 .nav-link::after {
-  content: "";
+  content: " ";
   position: absolute;
   left: 12px;
   bottom: -5px;
@@ -88,3 +86,15 @@ body {
   }
 }
 
+.main-container {
+display:flex;
+flex-wrap: wrap;
+}
+.section{
+  width:50%;
+}
+@media (max-width:768px) {
+  .section {
+    width:100%;
+  }
+}
