--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    margin: 0; padding: 0;
+    margin:0; padding: 0;
     font-family:  'Source Sans Pro', sans-serif;
 }
 
@@ -35,7 +35,7 @@ body {
 
 .nav-list{
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   list-style: none;
   
@@ -64,10 +64,10 @@ opacity: 0.7;
   left: 12px;
   bottom: -5px;
   width: calc(100% - 24px);
-  height: 2px;
-  background-color: rgb(249, 242, 36);
+  height: 1px;
+  background-color: rgba(249, 241, 138, 0.947);
   opacity: 0;
-  transition: .5s;
+  transition: 0.7s;
 }
 
 .nav-link:hover::after {
@@ -75,20 +75,18 @@ opacity: 0.7;
   animation-name: slidein;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  animation-direction: both;
 }
 
 @keyframes slidein {
-  from {
-    width: 0;
-  }
-  to {
-    width: calc(100% - 24px);
-  }
+  0% {width: calc(100% - 24px);}
+  40% {width: 0;}
 }
 
 .main-container {
 display:flex;
 flex-wrap: wrap;
+padding:0 20px;
 }
 .section{
   width:50%;
@@ -97,4 +95,29 @@ flex-wrap: wrap;
   .section {
     width:100%;
   }
+}
+
+.section-profile {
+  display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 50px 30px 35px;
+    border-bottom: 15px solid #302313;
+}
+.section-profile-photo {
+  width: 150px;
+  height: 170px;
+  object-fit: cover;
+  border-radius: 10%;
+  box-shadow: 0 2px 10px rgba(35, 21, 4, 0.923);
+  filter: grayscale(0.1) brightness(1.01) contrast(1.01) saturate(90%) hue-rotate(20deg);
+  transition: .3s;
+}
+.section-profile-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  
 }
