--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html {
   scroll-behavior: smooth;
 }
 
+
 header{
   background-color: #281711;
 }
@@ -24,9 +25,16 @@ body {
     min-height: 100vh;
     margin:0; padding: 0;
     font-family:  'Source Sans Pro', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #281711;
+    background-image: url("./assets/images/Background_best.png");
+    background-size: cover ;
+    background-color: rgba(238, 238, 238, 1);
+    background-repeat: no-repeat;
+    background-blend-mode: soft-light;
 }
-
-
 
 .container {
     max-width: 1440px;
@@ -53,12 +61,14 @@ body {
 }
 
 .nav-link:hover {
-color:rgb(253, 236, 9);
-opacity: 0.7;
-
+color:rgb(22, 21, 17);
+opacity: 1;
+background: rgb(255, 255, 255); 
+border-radius: 50%;
+transition: 1s;
 }
-
-.nav-link::after {
+/* nav-items animation disabled(hover underline)*/
+/*.nav-link::after {
   content: " ";
   position: absolute;
   left: 12px;
@@ -81,7 +91,7 @@ opacity: 0.7;
 @keyframes slidein {
   0% {width: calc(100% - 24px);}
   40% {width: 0;}
-}
+}*/
 
 .main-container {
 display:flex;
@@ -119,5 +129,12 @@ padding:0 20px;
   justify-content: center;
   align-content: center;
   text-align: center;
-  
+}
+.section-item a {
+  color: #829985;
+  text-decoration: none;  
+  transition: color 0.5s;
+}
+.section-item a:hover {
+  color: #4d2323;
 }
