--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ html {
 
 
 header{
-  background-color: #281711;
+  background-color: rgba(24, 21, 47, 0.11);
+  border-bottom: 1px solid #181330;
 }
 
 body {
@@ -28,12 +29,16 @@ body {
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
-    color: #281711;
-    background-image: url("./assets/images/Background_best.png");
+    color: #f5efe9;
+    background-image: url("./assets/images/background_img_2.jpg");
     background-size: cover ;
-    background-color: rgba(238, 238, 238, 1);
+    background-color: rgba(83, 52, 52, 0.664);
     background-repeat: no-repeat;
     background-blend-mode: soft-light;
+    background-attachment: fixed;
+    background-position: center center;
+
+    
 }
 
 .container {
@@ -112,7 +117,7 @@ padding:0 20px;
     justify-content: space-around;
     width: 100%;
     padding: 50px 30px 35px;
-    border-bottom: 15px solid #302313;
+    border-bottom: 1px solid #302313;
 }
 .section-profile-photo {
   width: 150px;
@@ -120,9 +125,13 @@ padding:0 20px;
   object-fit: cover;
   border-radius: 10%;
   box-shadow: 0 2px 10px rgba(35, 21, 4, 0.923);
-  filter: grayscale(0.1) brightness(1.01) contrast(1.01) saturate(90%) hue-rotate(20deg);
+  filter: grayscale(0.1) brightness(0.91) contrast(0.91) saturate(80%) hue-rotate(20deg);
   transition: .3s;
 }
+.section-profile-photo:hover {
+  filter: grayscale(0.01) brightness(0.9) contrast(0.9) saturate(100%) hue-rotate(20deg);
+}
+
 .section-profile-title {
   display: flex;
   flex-direction: column;
