--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 
 header{
   background-color: rgba(24, 21, 47, 0.11);
-  border-bottom: 1px solid #181330;
+  border-bottom: 1px solid #dfdcec;
 }
 
 body {
@@ -36,10 +36,17 @@ body {
     background-repeat: no-repeat;
     background-blend-mode: soft-light;
     background-attachment: fixed;
-    background-position: center center;
-
-    
+    background-position: center center; 
 }
+main{
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(70, 54, 54); 
+}
+
+
+li {
+  list-style: none;
+}
+
 
 .container {
     max-width: 1440px;
@@ -51,6 +58,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   list-style: none;
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(70, 54, 54); 
   
 }  
 
@@ -71,6 +79,7 @@ opacity: 1;
 background: rgb(255, 255, 255); 
 border-radius: 50%;
 transition: 1s;
+text-shadow: none;
 }
 /* nav-items animation disabled(hover underline)*/
 /*.nav-link::after {
@@ -105,6 +114,7 @@ padding:0 20px;
 }
 .section{
   width:50%;
+  
 }
 @media (max-width:768px) {
   .section {
@@ -117,7 +127,7 @@ padding:0 20px;
     justify-content: space-around;
     width: 100%;
     padding: 50px 30px 35px;
-    border-bottom: 1px solid #302313;
+    border-bottom: 1px solid #f6f2ed;
 }
 .section-profile-photo {
   width: 150px;
@@ -130,6 +140,7 @@ padding:0 20px;
 }
 .section-profile-photo:hover {
   filter: grayscale(0.01) brightness(0.9) contrast(0.9) saturate(100%) hue-rotate(20deg);
+  box-shadow: 0 2px 10px rgba(114, 116, 128, 0.923);
 }
 
 .section-profile-title {
@@ -139,11 +150,64 @@ padding:0 20px;
   align-content: center;
   text-align: center;
 }
+.section-title {
+  
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #f7f7fc;
+}
 .section-item a {
-  color: #829985;
-  text-decoration: none;  
-  transition: color 0.5s;
+  position: relative;
+  padding: 0 12px;
+  text-decoration: none;
+  color: rgb(225, 225, 235); 
+  transition:0.3s;
+  line-height: 30px;
 }
 .section-item a:hover {
-  color: #4d2323;
+  color:rgba(18, 17, 26, 1);
+  font-weight: 400;
+  opacity: 1;
+  background: rgba(247, 241, 241, 0.9);   
+  border-radius: 5%;
+  transition: 1s; 
+  text-shadow: none;
 }
+.pre {
+  padding: 0 0 0 0;
+  margin: -35px 0 -35px -200px;
+}
+
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px auto;
+  color: #fff;
+  background-color: rgb(12, 7, 46, 0.1);
+  border-top: 1px solid whitesmoke;
+  padding: 10px;
+}
+
+.rss-wrap {
+  width: 100px;
+  height: 40px;
+  display: inline-block; 
+  overflow: hidden; /* Скрываем всё за контуром */
+  background-color: #f6f2ed;
+}
+.rss-wrap img {
+  transition: 0.5s; /* Время эффекта */
+  display: block; 
+  margin: auto;
+}
+.rss-wrap img:hover {
+  transform: scale(1.1); /* Увеличиваем масштаб */
+}
+.footer {
+  background-color: #829985;
+  padding: 20px;  
+}
+
