--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+    min-width:320px;
     margin:0; padding: 0;
     font-family:  'Source Sans Pro', sans-serif;
     font-size: 18px;
@@ -39,7 +40,8 @@ body {
     background-position: center center; 
 }
 main{
-  text-shadow: 1px 1px 2px black, 0 0 1em rgb(70, 54, 54); 
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(70, 54, 54);
+  margin-bottom: auto; 
 }
 
 
@@ -196,7 +198,7 @@ padding:0 20px;
   height: 40px;
   display: inline-block; 
   overflow: hidden; /* Скрываем всё за контуром */
-  background-color: #f6f2ed;
+  background-color: rgb(246, 242, 237);
 }
 .rss-wrap img {
   transition: 0.5s; /* Время эффекта */
@@ -207,7 +209,98 @@ padding:0 20px;
   transform: scale(1.1); /* Увеличиваем масштаб */
 }
 .footer {
-  background-color: #829985;
+  background-color: rgb(130, 153, 133);
   padding: 20px;  
 }
 
+/** Adaptive **/
+.toggle {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: auto;
+  cursor: pointer;
+  user-select: none;
+  z-index: 15;
+}
+
+.toggle div {
+  width: 80%;
+  height: 2px;
+  background: #fff;
+  margin: 3px 0;
+  z-index: 15;
+}
+
+.toggle.collapsed .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle.collapsed .line2 {
+  opacity: 0;
+}
+
+.toggle.collapsed .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@media (max-width: 1440px) {
+  .container {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+  .section-profile {
+    flex-direction: column;
+    align-items: center;
+  }  
+  .section-education {
+    border-bottom: 1px solid #672f2f;
+  }
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav {
+    display: none;
+  }
+  .toggle {
+    display: flex;
+  }
+  .nav.collapsed {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    min-height: 525px;
+    flex-direction: column;
+    background-color: rgba(46, 44, 58, 0.98);
+  }
+  .nav-list.collapsed {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 410px) {
+  .main-title {
+    font-size: 24px;
+    letter-spacing: 4px;
+  }  
+}
