--- a/style.css
+++ b/style.css
@@ -84,31 +84,6 @@ border-radius: 50%;
 transition: 1s;
 text-shadow: none;
 }
-/* nav-items animation disabled(hover underline)*/
-/*.nav-link::after {
-  content: " ";
-  position: absolute;
-  left: 12px;
-  bottom: -5px;
-  width: calc(100% - 24px);
-  height: 1px;
-  background-color: rgba(249, 241, 138, 0.947);
-  opacity: 0;
-  transition: 0.7s;
-}
-
-.nav-link:hover::after {
-  opacity: 1;
-  animation-name: slidein;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-direction: both;
-}
-
-@keyframes slidein {
-  0% {width: calc(100% - 24px);}
-  40% {width: 0;}
-}*/
 
 .main-container {
 display:flex;
@@ -117,7 +92,6 @@ padding:0 20px;
 }
 .section{
   width:50%;
-  
 }
 @media (max-width:768px) {
   .section {
@@ -145,7 +119,6 @@ padding:0 20px;
 .section-profile-photo:hover {
   filter: grayscale(0.01) brightness(0.9) contrast(0.9) saturate(100%) hue-rotate(20deg);
   box-shadow: 0 2px 10px rgba(114, 116, 128, 0.923);
-
 }
 
 .section-profile-title {
@@ -199,110 +172,20 @@ padding:0 20px;
   width: 100px;
   height: 40px;
   display: inline-block; 
-  overflow: hidden; /* Скрываем всё за контуром */
+  overflow: hidden; 
   background-color: rgb(246, 242, 237);
 }
 .rss-wrap img {
-  transition: 0.5s; /* Время эффекта */
+  transition: 0.5s; 
   display: block; 
   margin: auto;
 }
 .rss-wrap img:hover {
-  transform: scale(1.1); /* Увеличиваем масштаб */
+  transform: scale(1.1); 
 }
 .footer {
   padding: 20px; 
   background-color: rgb(130, 153, 133);
 }
 
-/** Adaptive **/
-.toggle {
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  margin-top: 5px;
-  margin-left: auto;
-  cursor: pointer;
-  user-select: none;
-  z-index: 15;
-}
 
-.toggle div {
-  width: 80%;
-  height: 2px;
-  background: #fff;
-  margin: 3px 0;
-  z-index: 15;
-}
-
-.toggle.collapsed .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.toggle.collapsed .line2 {
-  opacity: 0;
-}
-
-.toggle.collapsed .line3 {
-  transform: rotate(45deg) translate(-5px, -6px);
-}
-
-@media (max-width: 1440px) {
-  .container {
-    padding: 0 20px;
-  }
-}
-
-@media (max-width: 768px) {
-  .section {
-    width: 100%;
-  }
-  .section-profile {
-    flex-direction: column;
-    align-items: center;
-  }  
-  .section-education {
-    border-bottom: 1px solid #672f2f;
-  }
-  .footer-container {
-    flex-direction: column;
-    align-items: center;
-  }
-  .nav {
-    display: none;
-  }
-  .toggle {
-    display: flex;
-  }
-  .nav.collapsed {
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 2;
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    min-height: 525px;
-    flex-direction: column;
-    background-color: rgba(46, 44, 58, 0.98);
-  }
-  .nav-list.collapsed {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    padding-top: 50px;
-  }
-}
-
-@media (max-width: 410px) {
-  .main-title {
-    font-size: 24px;
-    letter-spacing: 4px;
-  }  
-}
