--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ li {
   justify-content: flex-start;
   align-items: center;
   list-style: none;
-  text-shadow: 1px 1px 2px black, 0 0 1em rgb(70, 54, 54); 
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(70, 54, 54);
 }  
 
 .nav-link {
@@ -177,7 +177,7 @@ padding:0 20px;
 }
 .footer {
   padding: 20px; 
-  background-color: rgb(130, 153, 133);
+  background-color: rgb(130, 153, 133, 0.1);
 }
 
 
